linux (3.2.96-4) UNRELEASED; urgency=medium

  * abiupdate.py: Use current config instead of downloading previous config

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 07 Jan 2017 17:41:34 +0000

linux (3.2.96-3) wheezy-security; urgency=high

  * [amd64] Implement Kernel Page Table Isolation (KPTI, aka KAISER)
    (CVE-2017-5754)
  * Bump ABI to 5 and apply deferred stable changes:
    - Input: i8042 - break load dependency between atkbd/psmouse and i8042
    - Input: i8042 - set up shared ps2_cmd_mutex for AUX ports
    - ACPICA: Utilities: split IO address types from data type models.
    - ALSA: Enable CONFIG_ZONE_DMA for smaller PCI DMA masks
    - libata: Align ata_device's id on a cacheline
    - libata: Ignore spurious PHY event on LPM policy change
    - net/ipv6: add sysctl option accept_ra_min_hop_limit
  * USB: core: prevent malicious bNumInterfaces overflow (CVE-2017-17558)
  * [x86] KVM: Fix stack-out-of-bounds read in write_mmio (CVE-2017-17741)
  * crypto: salsa20 - fix blkcipher_walk API usage (CVE-2017-17805)
  * crypto: hmac - require that the underlying hash algorithm is unkeyed
    (CVE-2017-17806)
  * KEYS: add missing permission check for request_key() destination
    (CVE-2017-17807)

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 06 Jan 2018 22:07:04 +0000

linux (3.2.96-2) wheezy-security; urgency=high

  * [!x86] Adjust "mmap: Add an exception to the stack gap for Hotspot JVM
    compatibility" to fix FTBFS

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 10 Dec 2017 04:02:42 +0000

linux (3.2.96-1) wheezy-security; urgency=high

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.94
    - sched/fair, cpumask: Export for_each_cpu_wrap()
    - sched/topology: Fix building of overlapping sched-groups
    - mwifiex: fixup error cases in mwifiex_add_virtual_intf()
    - mceusb: fix memory leaks in error path
    - perf/core: Correct event creation with PERF_FORMAT_GROUP