@@ -1,6 +1,7 @@
 linux (3.2.96-4) UNRELEASED; urgency=medium
 
   * abiupdate.py: Use current config instead of downloading previous config
+  * abiupdate.py: Add support for security mirrors
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 07 Jan 2017 17:41:34 +0000
 
